--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@cloudinary/url-gen": "^1.21.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@headlessui/react": "^2.2.4",
     "@hookform/resolvers": "^5.1.1",
     "@material-tailwind/react": "^2.1.10",
     "@mui/icons-material": "^7.2.0",
