--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# VITE_API_BASE_URL=https://nest-mart-react-backend.onrender.com
-VITE_API_BASE_URL=http://localhost:3333/
+VITE_API_BASE_URL=https://nest-mart-react-backend.onrender.com
+# VITE_API_BASE_URL=http://localhost:3333/
 VITE_PAGE_DATA_LIMIT = 8
 VITE_CLOUD_NAME = dmlai0dwy
 VITE_UPLOAD_PRESET = REACT_UPLOAD_PRESET
