--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tanstack/react-query": "^5.83.0",
     "@types/lodash": "^4.17.20",
     "@types/qrcode": "^1.5.5",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.10.0",
     "framer-motion": "^12.23.6",
